filled out initial technologies section

--- a/index.html
+++ b/index.html
@@ -6,5 +6,64 @@
     <title>Document</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <a href="#profile">about</a>
+      <a href="#projects">projects</a>
+      <a href="#blogs">blogs</a>
+      <a href="#sandbox">sandbox</a>
+    </header>
+    <main>
+      <section id="profile">
+        <img id="profile-pic" alt="profile pic" />
+        <h1>Matt Eva</h1>
+        <section id="socials"></section>
+        <p>Software Engineer and Technical Writer</p>
+        <h2>Tools and Technologies:</h2>
+        <p>Programming Languages:</p>
+        <ul>
+          <li>JavaScript / TypeScript - Main</li>
+          <li>Ruby</li>
+          <li>Python</li>
+        </ul>
+        <p>Frameworks:</p>
+        <ul>
+          <li>React - Main</li>
+          <li>Node / Express - Main</li>
+          <li>Ruby on Rails</li>
+          <li>Flask</li>
+        </ul>
+        <p>Databases:</p>
+        <ul>
+          <li>Neo4j - Cypher</li>
+          <li>MongoDb</li>
+          <li>Cassandra - CQL</li>
+          <li>PostgreSQL - SQL</li>
+          <li>Redis</li>
+        </ul>
+        <p>UX / UI:</p>
+        <ul>
+          <li>CSS</li>
+          <li>HTML</li>
+          <li>Figma</li>
+        </ul>
+        <p>SysAdmin / DevOps / Deployment:</p>
+        <ul>
+          <li>Linux</li>
+          <li>Digital Ocean</li>
+          <li>Docker</li>
+          <li>Kubernetes</li>
+        </ul>
+      </section>
+      <section id="projects">
+        <h2>Projects</h2>
+      </section>
+      <section id="blogs">
+        <h2>Blogs</h2>
+      </section>
+      <section id="sandbox">
+        <h2>Sandbox Projects</h2>
+      </section>
+    </main>
+  </body>
 </html>
