added Git and GitHub

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         </ul>
         <p>SysAdmin / DevOps / Deployment:</p>
         <ul>
+          <li>Git / GitHub</li>
           <li>Linux</li>
           <li>Digital Ocean</li>
           <li>Docker</li>
