--- a/index.html
+++ b/index.html
@@ -18,43 +18,29 @@
         <img id="profile-pic" alt="profile pic" />
         <h1>Matt Eva</h1>
         <section id="socials"></section>
-        <p>Software Engineer and Technical Writer</p>
-        <h2>Tools and Technologies:</h2>
-        <p>Programming Languages:</p>
-        <ul>
-          <li>JavaScript / TypeScript - Main</li>
-          <li>Ruby</li>
-          <li>Python</li>
-        </ul>
-        <p>Frameworks:</p>
-        <ul>
-          <li>React - Main</li>
-          <li>Node / Express - Main</li>
-          <li>Ruby on Rails</li>
-          <li>Flask</li>
-        </ul>
-        <p>Databases:</p>
-        <ul>
-          <li>Neo4j - Cypher</li>
-          <li>MongoDb</li>
-          <li>Cassandra - CQL</li>
-          <li>PostgreSQL - SQL</li>
-          <li>Redis</li>
-        </ul>
-        <p>UX / UI:</p>
-        <ul>
-          <li>CSS</li>
-          <li>HTML</li>
-          <li>Figma</li>
-        </ul>
-        <p>SysAdmin / DevOps / Deployment:</p>
-        <ul>
-          <li>Git / GitHub</li>
-          <li>Linux</li>
-          <li>Digital Ocean</li>
-          <li>Docker</li>
-          <li>Kubernetes</li>
-        </ul>
+        <p id="description">
+          Full Stack Software Engineer and Technical Writer
+        </p>
+        <h2>Tools and Technologies</h2>
+        <h3>Programming Languages</h3>
+        <p><span>Main</span>: JavaScript / TypeScript</p>
+        <p><span>Familiar</span>: Ruby, Python</p>
+        <h3>Frontend Frameworks</h3>
+        <p>React</p>
+        <h3>UX / UI</h3>
+        <p>CSS, HTML, Figma</p>
+        <h3>Backend Frameworks</h3>
+        <p><span>Main</span>: Node / Express</p>
+        <p><span>Familiar</span>: Ruby on Rails, Flask</p>
+        <h3>Databases</h3>
+        <p>
+          <span>Main</span>: Neo4j / Cypher, MongoDB, Cassandra / CQL, Redis
+        </p>
+        <p><span>Familiar</span>: PostgreSQL, SQLite, SQL</p>
+        <h3>SysAdmin / DevOps</h3>
+        <p><span>Main</span>: Git / GitHub, Render</p>
+        <p><span>Learning</span>: Linux, Digital Ocean, Docker, Kubernetes</p>
+        <h2>Work Experience</h2>
       </section>
       <section id="projects">
         <h2>Projects</h2>
