added profile pic

--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
     </header>
     <main>
       <section id="profile">
-        <img id="profile-pic" alt="profile pic" />
+        <img id="profile-pic" alt="profile pic" src="profile_pic.jpg" />
         <h1>Matt Eva</h1>
         <section id="socials"></section>
         <p id="description">
           Full Stack Software Engineer and Technical Writer
         </p>
+        <p id="bio"></p>
         <h2>Tools and Technologies</h2>
         <h3>Programming Languages</h3>
         <p><span>Main</span>: JavaScript / TypeScript</p>
