added Inter-Thin font

--- a/index.html
+++ b/index.html
@@ -7,51 +7,31 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <header>
-      <a href="#profile">about</a>
-      <a href="#projects">projects</a>
-      <a href="#blogs">blogs</a>
-      <a href="#sandbox">sandbox</a>
-    </header>
-    <main>
-      <section id="profile">
-        <img id="profile-pic" alt="profile pic" src="profile_pic.jpg" />
-        <h1>Matt Eva</h1>
-        <section id="socials"></section>
-        <p id="description">
-          Full Stack Software Engineer and Technical Writer
-        </p>
-        <p id="bio"></p>
-        <h2>Tools and Technologies</h2>
-        <h3>Programming Languages</h3>
-        <p><span>Main</span>: JavaScript / TypeScript</p>
-        <p><span>Familiar</span>: Ruby, Python</p>
-        <h3>Frontend Frameworks</h3>
-        <p>React</p>
-        <h3>UX / UI</h3>
-        <p>CSS, HTML, Figma</p>
-        <h3>Backend Frameworks</h3>
-        <p><span>Main</span>: Node / Express</p>
-        <p><span>Familiar</span>: Ruby on Rails, Flask</p>
-        <h3>Databases</h3>
-        <p>
-          <span>Main</span>: Neo4j / Cypher, MongoDB, Cassandra / CQL, Redis
-        </p>
-        <p><span>Familiar</span>: PostgreSQL, SQLite, SQL</p>
-        <h3>SysAdmin / DevOps</h3>
-        <p><span>Main</span>: Git / GitHub, Render</p>
-        <p><span>Learning</span>: Linux, Digital Ocean, Docker, Kubernetes</p>
-        <h2>Work Experience</h2>
-      </section>
-      <section id="projects">
-        <h2>Projects</h2>
-      </section>
-      <section id="blogs">
-        <h2>Blogs</h2>
-      </section>
-      <section id="sandbox">
-        <h2>Sandbox Projects</h2>
-      </section>
-    </main>
+    <div id="container">
+      <header>
+        <a href="#about">about</a>
+        <a href="#experience">experience</a>
+        <a href="#projects">projects</a>
+        <a href="#blogs">blogs</a>
+      </header>
+      <main>
+        <section id="about">
+          <img id="profile-pic" alt="profile pic" src="profile_pic.jpg" />
+          <h1>Matt Eva</h1>
+          <p id="description">Software Engineer and Technical Writer</p>
+          <p id="bio"></p>
+        </section>
+        <section id="experience">
+          <h2>Recent Work Experience</h2>
+        </section>
+        <section id="projects">
+          <h2>Projects</h2>
+        </section>
+        <section id="blogs">
+          <h2>Blogs</h2>
+          <p>Coming soon!</p>
+        </section>
+      </main>
+    </div>
   </body>
 </html>
