added h3s to tools-tech section

--- a/index.html
+++ b/index.html
@@ -16,10 +16,24 @@
       </header>
       <main>
         <section id="about">
-          <img id="profile-pic" alt="profile pic" src="profile_pic.jpg" />
-          <h1>Matt Eva</h1>
-          <p id="description">Software Engineer and Technical Writer</p>
-          <p id="bio"></p>
+          <section id="profile">
+            <img id="profile-pic" alt="profile pic" src="profile_pic.jpg" />
+            <h1>Matt Eva</h1>
+            <p id="description">Software Engineer and Technical Writer</p>
+            <button class="read-more about-button">about me</button>
+            <p id="bio"></p>
+            <button class="read-more about-button">
+              why you should hire me
+            </button>
+            <p id="hire-me"></p>
+          </section>
+          <section id="tools-tech">
+            <h2>Tools and Technologies</h2>
+            <h3>Main</h3>
+            <h3>Familiar</h3>
+            <h3>Learning</h3>
+            <h3>Plan on Learning</h3>
+          </section>
         </section>
         <section id="experience">
           <h2>Recent Work Experience</h2>
