--- a/index.html
+++ b/index.html
@@ -30,13 +30,38 @@
           <section id="tools-tech">
             <h2>Tools and Technologies</h2>
             <h3>Main</h3>
+            <p>
+              JavaScript, TypeScript, Nodejs, Express, React, Neo4j, Cypher,
+              CSS, HTML, Git, GitHub
+            </p>
             <h3>Familiar</h3>
+            <p>
+              Ruby, Ruby on Rails, Python, Flask, SQL, SQLAlchemy, Relational
+              Databases, MongoDB, Progressive Web Apps, Figma, Render
+            </p>
             <h3>Learning</h3>
+            <p>
+              Java, Cassandra, CQL, Redis, Linux, Digital Ocean, SysAdmin,
+              DevOps
+            </p>
             <h3>Plan on Learning</h3>
+            <p>
+              Docker, Kubernetes, ScyllaDB, Terraform, PHP, C#, Go, Elixir,
+              Rust, Kotlin, Swift
+            </p>
+          </section>
+          <section id="topics">
+            <h2>Topics of Interest</h2>
+            <p>
+              System Architecture, Scalability, Distributed Systems, Databases,
+              Database Modeling and Design, Database Sharding, Database
+              Clustering, Horizontal Scaling.
+            </p>
           </section>
         </section>
         <section id="experience">
           <h2>Recent Work Experience</h2>
+          <h3></h3>
         </section>
         <section id="projects">
           <h2>Projects</h2>
