created index.js file

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="styles.css" />
+    <script defer type="text/javascript" src="index.js"></script>
   </head>
   <body>
     <div id="container">
@@ -61,7 +62,10 @@
         </section>
         <section id="experience">
           <h2>Recent Work Experience</h2>
-          <h3></h3>
+          <h3>Associate Instructor, Software Engineering</h3>
+          <button class="read-more">read more</button>
+          <section></section>
+          <h3>Technical Coach, Software Engineering</h3>
         </section>
         <section id="projects">
           <h2>Projects</h2>
