set up read-more button to toggle subsequent content

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h1>Matt Eva</h1>
             <p id="description">Software Engineer and Technical Writer</p>
             <button class="read-more about-button">about me</button>
-            <p id="bio"></p>
+            <p id="bio" class="hidden-content">Example bio</p>
             <button class="read-more about-button">
               why you should hire me
             </button>
