added read more button to job section and added example hidden content

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <button class="read-more about-button">
               why you should hire me
             </button>
-            <p id="hire-me"></p>
+            <p id="hire-me" class="hidden-content">example hire me</p>
           </section>
           <section id="tools-tech">
             <h2>Tools and Technologies</h2>
@@ -64,11 +64,23 @@
           <h2>Recent Work Experience</h2>
           <h3>Associate Instructor, Software Engineering</h3>
           <button class="read-more">read more</button>
-          <section></section>
+          <section class="hidden-content">
+            example
+            <ul></ul>
+          </section>
           <h3>Technical Coach, Software Engineering</h3>
+          <button class="read-more">read more</button>
+          <section class="hidden-content">
+            example
+            <ul></ul>
+          </section>
         </section>
         <section id="projects">
           <h2>Projects</h2>
+          <h3>Main</h3>
+          <h4>Connect</h4>
+          <h3>Sandbox</h3>
+          <h4>FreeCreate (Beta)</h4>
         </section>
         <section id="blogs">
           <h2>Blogs</h2>
