--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
   <body>
     <div id="container">
       <header>
-        <a href="#about">about</a>
-        <a href="#experience">experience</a>
-        <a href="#projects">projects</a>
-        <a href="#blogs">blogs</a>
+        <nav id="header-nav">
+          <a href="#about" class="nav-link">about</a>
+          <a href="#experience" class="nav-link">experience</a>
+          <a href="#projects" class="nav-link">projects</a>
+          <a href="#blogs" class="nav-link">blogs</a>
+        </nav>
       </header>
       <main>
         <section id="about">
@@ -32,8 +34,7 @@
             <h2>Tools and Technologies</h2>
             <h3>Main</h3>
             <p>
-              JavaScript, TypeScript, Nodejs, Express, React, Neo4j, Cypher,
-              CSS, HTML, Git, GitHub
+              JavaScript, TypeScript, Nodejs, Express, React, Redux, CSS, HTML, Neo4j, Cypher, Git, GitHub
             </p>
             <h3>Familiar</h3>
             <p>
@@ -77,16 +78,35 @@
         </section>
         <section id="projects">
           <h2>Projects</h2>
+          <section></section>
           <h3>Main</h3>
-          <h4>Connect</h4>
+            <article class="project-card">
+            <h4>Connect</h4>
+            <a href="https://github.com/Matt-Eva/connect-monolith" target="_blank">GitHub</a>
+            <a href="https://connect-9ekd.onrender.com/" target="_blank">website</a>
+            <button class="read-more">read more</button>
+          </article>
+          </section>
+          <section>
           <h3>Sandbox</h3>
-          <h4>FreeCreate (Beta)</h4>
+          <article class="project-card">
+            <h4>FreeCreate (Beta)</h4>
+            <a href="https://github.com/Matt-Eva/FreeCreate-Beta" target="_blank">GitHub</a>
+            <button class="read-more">read more</button>
+          </article>
+        </section>
         </section>
         <section id="blogs">
           <h2>Blogs</h2>
           <p>Coming soon!</p>
         </section>
       </main>
+      <footer>
+        <nav id="footer-nav">
+          <a class="nav-link" href="https://www.linkedin.com/in/mattheweva/" target="_blank">LinkedIn</a>
+          <a class="nav-link" href="https://github.com/Matt-Eva" target="_blank">GitHub</a>
+        </nav>
+      </footer>
     </div>
   </body>
 </html>
