spaced out tools and technologies section

--- a/index.html
+++ b/index.html
@@ -34,22 +34,22 @@
             <h2>Tools and Technologies</h2>
             <h3>Main</h3>
             <p>
-              JavaScript, TypeScript, Nodejs, Express, React, Redux, CSS, HTML, Neo4j, Cypher, Git, GitHub
+              JavaScript, TypeScript, Nodejs, Express, React, Redux, CSS, HTML, Neo4j, Cypher, Git, GitHub.
             </p>
             <h3>Familiar</h3>
             <p>
               Ruby, Ruby on Rails, Python, Flask, SQL, SQLAlchemy, Relational
-              Databases, MongoDB, Progressive Web Apps, Figma, Render
+              Databases, MongoDB, Progressive Web Apps, Figma, Render.
             </p>
             <h3>Learning</h3>
             <p>
               Java, Cassandra, CQL, Redis, Linux, Digital Ocean, SysAdmin,
-              DevOps
+              DevOps.
             </p>
             <h3>Plan on Learning</h3>
             <p>
               Docker, Kubernetes, ScyllaDB, Terraform, PHP, C#, Go, Elixir,
-              Rust, Kotlin, Swift
+              Rust, Kotlin, Swift.
             </p>
           </section>
           <section id="topics">
