added background color to revealed content sections

--- a/index.html
+++ b/index.html
@@ -24,17 +24,20 @@
             <h1>Matt Eva</h1>
             <p id="description">Software Engineer and Technical Writer</p>
             <button class="read-more about-button">about me</button>
-            <p id="bio" class="hidden-content">Example bio</p>
+            <p id="bio" class="hidden-content revealed-content">Example bio</p>
             <button class="read-more about-button">
               why you should hire me
             </button>
-            <p id="hire-me" class="hidden-content">example hire me</p>
+            <p id="hire-me" class="hidden-content revealed-content">
+              example hire me
+            </p>
           </section>
           <section id="tools-tech">
             <h2>Tools and Technologies</h2>
             <h3>Main</h3>
             <p>
-              JavaScript, TypeScript, Nodejs, Express, React, Redux, CSS, HTML, Neo4j, Cypher, Git, GitHub.
+              JavaScript, TypeScript, Nodejs, Express, React, Redux, CSS, HTML,
+              Neo4j, Cypher, Git, GitHub.
             </p>
             <h3>Familiar</h3>
             <p>
@@ -55,46 +58,66 @@
           <section id="topics">
             <h2>Topics of Interest</h2>
             <p>
-              System Architecture, Scalability, Distributed Systems, Databases,
-              Database Modeling and Design, Database Sharding, Database
-              Clustering, Horizontal Scaling.
+              System Architecture and Design, Scalability, Distributed Systems,
+              Databases, Database Modeling and Design, Database Sharding,
+              Database Clustering, Horizontal Scaling.
             </p>
           </section>
         </section>
         <section id="experience">
           <h2>Recent Work Experience</h2>
-          <h3>Associate Instructor, Software Engineering</h3>
-          <button class="read-more">read more</button>
-          <section class="hidden-content">
-            example
-            <ul></ul>
-          </section>
-          <h3>Technical Coach, Software Engineering</h3>
-          <button class="read-more">read more</button>
-          <section class="hidden-content">
-            example
-            <ul></ul>
-          </section>
+          <article>
+            <h3>Associate Instructor, Software Engineering</h3>
+            <button class="read-more">read more</button>
+            <section class="hidden-content revealed-content">
+              example
+              <ul></ul>
+            </section>
+          </article>
+          <article>
+            <h3>Technical Coach, Software Engineering</h3>
+            <button class="read-more">read more</button>
+            <section class="hidden-content revealed-content">
+              example
+              <ul></ul>
+            </section>
+          </article>
         </section>
         <section id="projects">
           <h2>Projects</h2>
-          <section></section>
-          <h3>Main</h3>
+          <section>
+            <h3>Main</h3>
             <article class="project-card">
-            <h4>Connect</h4>
-            <a href="https://github.com/Matt-Eva/connect-monolith" target="_blank">GitHub</a>
-            <a href="https://connect-9ekd.onrender.com/" target="_blank">website</a>
-            <button class="read-more">read more</button>
-          </article>
+              <section>
+                <h4>Connect:</h4>
+                <a
+                  href="https://github.com/Matt-Eva/connect-monolith"
+                  target="_blank"
+                  >GitHub</a
+                >
+                <a href="https://connect-9ekd.onrender.com/" target="_blank"
+                  >Website</a
+                >
+              </section>
+              <button class="read-more">read more</button>
+              <p class="hidden-content revealed-content">example</p>
+            </article>
           </section>
           <section>
-          <h3>Sandbox</h3>
-          <article class="project-card">
-            <h4>FreeCreate (Beta)</h4>
-            <a href="https://github.com/Matt-Eva/FreeCreate-Beta" target="_blank">GitHub</a>
-            <button class="read-more">read more</button>
-          </article>
-        </section>
+            <h3>Sandbox</h3>
+            <article class="project-card">
+              <section>
+                <h4>FreeCreate (Beta):</h4>
+                <a
+                  href="https://github.com/Matt-Eva/FreeCreate-Beta"
+                  target="_blank"
+                  >GitHub</a
+                >
+              </section>
+              <button class="read-more">read more</button>
+              <p class="hidden-content revealed-content">example</p>
+            </article>
+          </section>
         </section>
         <section id="blogs">
           <h2>Blogs</h2>
@@ -103,8 +126,15 @@
       </main>
       <footer>
         <nav id="footer-nav">
-          <a class="nav-link" href="https://www.linkedin.com/in/mattheweva/" target="_blank">LinkedIn</a>
-          <a class="nav-link" href="https://github.com/Matt-Eva" target="_blank">GitHub</a>
+          <a
+            class="nav-link"
+            href="https://www.linkedin.com/in/mattheweva/"
+            target="_blank"
+            >LinkedIn</a
+          >
+          <a class="nav-link" href="https://github.com/Matt-Eva" target="_blank"
+            >GitHub</a
+          >
         </nav>
       </footer>
     </div>
