added content for work experience and project details
initial draft complete

--- a/index.html
+++ b/index.html
@@ -142,26 +142,34 @@
           </section>
           <section id="tools-tech">
             <h2>Tools and Technologies</h2>
-            <h3>Main</h3>
-            <p>
-              JavaScript, TypeScript, Nodejs, Express, React, Redux, CSS, HTML,
-              Neo4j, Cypher, Git, GitHub.
-            </p>
-            <h3>Familiar</h3>
-            <p>
-              Ruby, Ruby on Rails, Python, Flask, SQL, SQLAlchemy, Relational
-              Databases, MongoDB, Progressive Web Apps, Figma, Render.
-            </p>
-            <h3>Learning</h3>
-            <p>
-              Java, Cassandra, CQL, Redis, Linux, Digital Ocean, SysAdmin,
-              DevOps.
-            </p>
-            <h3>Plan on Learning</h3>
-            <p>
-              Docker, Kubernetes, ScyllaDB, Terraform, PHP, C#, Go, Elixir,
-              Rust, Kotlin, Swift.
-            </p>
+            <article>
+              <h3>Main</h3>
+              <p>
+                JavaScript, TypeScript, Nodejs, Express, React, Redux, CSS,
+                HTML, Neo4j, Cypher, Git, GitHub.
+              </p>
+            </article>
+            <article>
+              <h3>Familiar</h3>
+              <p>
+                Ruby, Ruby on Rails, Python, Flask, SQL, SQLAlchemy, Relational
+                Databases, MongoDB, Progressive Web Apps, Figma, Render.
+              </p>
+            </article>
+            <article>
+              <h3>Learning</h3>
+              <p>
+                Java, Cassandra, CQL, Redis, Linux, Digital Ocean, SysAdmin,
+                DevOps.
+              </p>
+            </article>
+            <article>
+              <h3>Plan on Learning</h3>
+              <p>
+                Docker, Kubernetes, ScyllaDB, Terraform, PHP, C#, Go, Elixir,
+                Rust, Kotlin, Swift.
+              </p>
+            </article>
           </section>
           <section id="topics">
             <h2>Topics of Interest</h2>
@@ -174,20 +182,78 @@
         </section>
         <section id="experience">
           <h2>Recent Work Experience</h2>
-          <article>
+          <article id="associate-instructor">
             <h3>Associate Instructor, Software Engineering</h3>
             <button class="read-more">read more</button>
             <section class="hidden-content revealed-content">
-              example
-              <ul></ul>
+              <ul>
+                <li>
+                  Taught Front End and Full Stack Web Development to Amazon
+                  Career Choice software engineering students.
+                </li>
+                <li>
+                  Taught JavaScript, HTML, CSS, React, Python, Flask, SQL, and
+                  SQLAlchemy.
+                </li>
+                <li>
+                  Helped organize and architect the program, including
+                  coordinating communication with over 500 students, setting up
+                  assignment scheduling and lecture pacing, and contributing
+                  toward communication and educational pedagogy for our team.
+                </li>
+                <li>
+                  Regularly met with students in one-on-one and group
+                  environments to answer questions, instill programming best
+                  practices, and teach essential developer skills, like
+                  debugging, time management, and research.
+                </li>
+                <li>
+                  Researched and authored a rewrite of Flatiron School's
+                  material on React Router and client-side routing to transition
+                  from React Router v5 to the latest version of React Router v6.
+                </li>
+                <li>
+                  Contributed to ongoing efforts of curriculum maintenance by
+                  raising, reviewing, and implementing changes for issues and
+                  pull requests on GitHub.
+                </li>
+              </ul>
             </section>
           </article>
           <article>
             <h3>Technical Coach, Software Engineering</h3>
             <button class="read-more">read more</button>
             <section class="hidden-content revealed-content">
-              example
-              <ul></ul>
+              <ul>
+                <li>
+                  Worked closely with Flatiron School students in one-on-one and
+                  group environments to cover fundamental programming concepts
+                  in an approachable and in-depth manner.
+                </li>
+                <li>
+                  Taught JavaScript, HTML, CSS, React, Ruby, SQL, Sinatra, and
+                  Ruby on Rails.
+                </li>
+                <li>
+                  Led review sessions covering foundational programming concepts
+                  such as OOP, Relational Databases, MVC architecture, REST
+                  APIs, and SPAs, as well as additional topics such as
+                  responsive, mobile-first design, user authorization and
+                  authentication, and client-side routing.
+                </li>
+                <li>
+                  Independently wrote and developed supplemental readings and
+                  lectures on topics including CSS Flexbox, Grid, and Media
+                  Queries as well as React application structure and state
+                  management with tools like useContext, Recoil, and Redux
+                  Toolkit.
+                </li>
+                <li>
+                  Helped design and organize the pacing and structure of
+                  Flatiron's Live Remote assignment schedule and contributed to
+                  Flatiron's pedagogy, teaching model, and course philosophy.
+                </li>
+              </ul>
             </section>
           </article>
         </section>
@@ -208,7 +274,24 @@
                 >
               </section>
               <button class="read-more">read more</button>
-              <p class="hidden-content revealed-content">example</p>
+              <div class="hidden-content revealed-content">
+                <ul>
+                  <li>
+                    Connect is a social media application for finding and
+                    forming connections, chatting, and sharing posts.
+                  </li>
+                  <li>
+                    It was built with TypeScript, Express, Nodejs, React,
+                    React-Router, Redux-Toolkit, Socket.io, CSS,
+                    Express-Session, Redis, Neo4j, MongoDB, and Cassandra.
+                  </li>
+                  <li>It's currently deployed on Render.</li>
+                  <li>
+                    It's set up as a Progressive Web App. It's installable, and
+                    has notifications enabled.
+                  </li>
+                </ul>
+              </div>
             </article>
           </section>
           <section>
@@ -223,7 +306,25 @@
                 >
               </section>
               <button class="read-more">read more</button>
-              <p class="hidden-content revealed-content">example</p>
+              <div class="hidden-content revealed-content">
+                <ul>
+                  <li>
+                    FreeCreate is a content sharing platform for all forms of
+                    media.
+                  </li>
+                  <li>
+                    This version is a prototype built with Ruby on Rails,
+                    PostgreSQL, React, React-Router, Redux-Toolkit, Bootstrap,
+                    CSS, and Cloudinary.
+                  </li>
+                  <li>
+                    The future version of FreeCreate will focus primarily on
+                    hosting writing first, and is being designed with
+                    scalability as a top priority. It's currently under
+                    development!
+                  </li>
+                </ul>
+              </div>
             </article>
           </section>
         </section>
