removing last name from Bio

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <button class="read-more about-button">about me</button>
             <div id="bio" class="hidden-content revealed-content">
               <p>
-                Hi there! I’m Matt Eva. I’m a career changer from editing and
+                Hi there! I’m Matt. I’m a career changer from editing and
                 content writing to software engineering and technical writing.
               </p>
               <p>
