added extra spacing between testimonial paragraphs

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             </div>
 
             <button class="read-more about-button">student testimonials</button>
-            <div class="hidden-content">
+            <div id="testimonials" class="hidden-content">
               <p id="student-anonymity">
                 <em>
                   student names have been kept anonymous to respect their
