updated about section

--- a/index.html
+++ b/index.html
@@ -48,19 +48,18 @@
                 At that time, I was working as a marketing copywriter, content
                 writer, and editor for various tech companies located in the San
                 Francisco Bay Area. After discovering my love for programming, I
-                realized I would much rather build and design tools and
-                technologies than write about them! At that point, I decided to
-                make a full career transition from writing to programming, and
-                enrolled in Flatiron School’s Full Stack Software Engineering
-                program.
+                realized I wanted a deeper understanding of how the tech tools I
+                was writing about were built! At that point, I decided to make a
+                full career transition into programming, and enrolled in
+                Flatiron School’s Full Stack Software Engineering program.
               </p>
               <p>
                 Toward the end of the program, my instructor suggested I apply
                 for a teaching position at Flatiron School itself, after
-                noticing how I helped my peers on our journey together through
-                the program. I had always wanted to try teaching, and wanted to
-                continue my own programming education, so I applied and was
-                hired immediately after I graduated.
+                noticing how I engaged with my peers on our journey together
+                through the program. I had always wanted to try teaching, and
+                wanted to continue my own programming education, so I applied
+                and was hired immediately after I graduated.
               </p>
               <p>
                 As it turns out, I absolutely loved teaching! It gave me an
@@ -71,13 +70,14 @@
               </p>
 
               <p>
-                While teaching was deeply rewarding, I knew I would one day move
-                on to work as a fully-fledged software engineer. And while the
-                role was great for honing foundational programming principles,
-                there was only so much I was able to learn on the job. I spent
-                many hours outside of work studying, researching, and coming up
-                with supplemental content to teach to students, but I was and
-                still am excited to do more hands-on learning as an engineer.
+                While teaching was deeply rewarding, I knew I wanted to move
+                into an engineering or technical writing role where I could
+                continue deepening my knowledge and skills. My teaching role was
+                great for honing foundational programming principles, but there
+                was only so much I was able to learn on the job. I spent many
+                hours outside of work studying, researching, and coming up with
+                supplemental content to teach to students, but I was and still
+                am excited to do more hands-on learning.
               </p>
 
               <p>
