updated tools and technologies section

--- a/index.html
+++ b/index.html
@@ -268,32 +268,30 @@
           <section id="tools-tech">
             <h2>Tools and Technologies</h2>
             <article>
-              <h3>Main</h3>
+              <h3>Programming Languages</h3>
+              <p>JavaScript / TypeScript, Python, Ruby.</p>
+            </article>
+            <article>
+              <h3>Frontend Tools and Frameworks</h3>
+              <p>HTML, CSS, React, Redux, React-Router</p>
+            </article>
+            <article>
+              <h3>Backend Tools and Frameworks</h3>
+              <p>Nodejs, Express, Flask, Ruby on Rails</p>
+            </article>
+            <article>
+              <h3>Databases</h3>
               <p>
-                JavaScript, TypeScript, Nodejs, Express, React, Redux, CSS,
-                HTML, Neo4j, Cypher, Git, GitHub.
+                Relational Databases (SQL), Neo4j (Cypher), MongoDB, Cassandra
               </p>
             </article>
             <article>
-              <h3>Familiar</h3>
-              <p>
-                Ruby, Ruby on Rails, Python, Flask, SQL, SQLAlchemy, Relational
-                Databases, MongoDB, Progressive Web Apps, Figma, Render.
-              </p>
+              <h3>Developer Tools</h3>
+              <p>Git / GitHub</p>
             </article>
             <article>
               <h3>Learning</h3>
-              <p>
-                Java, Cassandra, CQL, Redis, Linux, Digital Ocean, SysAdmin,
-                DevOps.
-              </p>
-            </article>
-            <article>
-              <h3>Plan on Learning</h3>
-              <p>
-                Docker, Kubernetes, ScyllaDB, Terraform, PHP, C#, Go, Elixir,
-                Rust, Kotlin, Swift.
-              </p>
+              <p>Docker, Java, Go</p>
             </article>
           </section>
           <section id="topics">
